--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,7 +1,16 @@
 
 # Important:
-# Check out the MiniMessage docs to see how to properly use colors.
+# Check out the MiniMessage docs to see how to properly use colors for messages.
 # https://docs.advntr.dev/minimessage/format
+
+# Scoreboard allows legacy color codes ('§7') to be used.
+# You can add more lines to the scoreboard.
+# The scoreboard also supports PlaceholderAPI!
+
+# Please visit 'https://github.com/NotAzex/neon-java/blob/main/placeholders'
+# to see all the placeholders and what they do.
+
+# %player% returns the name of the player.
 
 WorldGuard:
   World: world
@@ -15,3 +24,13 @@ Sounds:
   Error: BLOCK_NOTE_BLOCK_BASS
   Pitch: 1
   Volume: 100
+Scoreboard:
+  Enable: true
+  Title: §5☄ Neon
+  Lines:
+    - ""
+    - " §7| &fAlive: &5%alive_size%"
+    - " §7| &fDead: &5%dead_size%"
+    - " §7| &fTokens: &5%tokens_%player%%"
+    - " "
+    - "§7§oEdit this in the config of Neon."
