--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: Neon
-version: '1.1.3'
+version: '1.1.4'
 main: org.azex.neon.Neon
 api-version: '1.20'
 softdepend: [PlaceholderAPI]
@@ -8,6 +8,12 @@ authors: [ Azex ]
 description: Neon, but it's rewritten in Java
 website: https://discord.gg/nKEa5NxRew
 commands:
+  givealive:
+    description: Gives items to alive people.
+    permission: neon.admin
+  givedead:
+    description: Gives items to dead people.
+    permission: neon.admin
   kickalive:
     description: Kicks alive people.
     permission: neon.admin
