--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,11 +1,11 @@
 name: Neon
-version: '1.1.6'
+version: '1.1.9'
 main: org.azex.neon.Neon
 api-version: '1.20'
 softdepend: [PlaceholderAPI]
 depend: [WorldGuard]
 authors: [ Azex ]
-description: Neon, but it's rewritten in Java
+description: Neon, a simple free core for events with plenty of features.
 website: https://discord.gg/nKEa5NxRew
 commands:
   wins:
