--- a/build.gradle
+++ b/build.gradle
@@ -22,36 +22,12 @@ repositories {
         name = "sonatype"
         url = "https://oss.sonatype.org/content/groups/public/"
     }
+    maven {
+        url = 'https://repo.skriptlang.org/releases'
+    }
 }
 
 dependencies {
-    implementation("org.json:json:20240303", "org.yaml:snakeyaml:2.0")
+    implementation("org.json:json:20240303", "com.github.SkriptLang:Skript:2.11.1", "org.yaml:snakeyaml:2.0")
     compileOnly("io.papermc.paper:paper-api:1.20.1-R0.1-SNAPSHOT", "me.clip:placeholderapi:2.11.6", "com.sk89q.worldguard:worldguard-bukkit:7.0.13")
-}
-
-def targetJavaVersion = 21
-java {
-    def javaVersion = JavaVersion.toVersion(targetJavaVersion)
-    sourceCompatibility = javaVersion
-    targetCompatibility = javaVersion
-    if (JavaVersion.current() < javaVersion) {
-        toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
-    }
-}
-
-tasks.withType(JavaCompile).configureEach {
-    options.encoding = 'UTF-8'
-
-    if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
-        options.release.set(targetJavaVersion)
-    }
-}
-
-processResources {
-    def props = [version: version]
-    inputs.properties props
-    filteringCharset 'UTF-8'
-    filesMatching('plugin.yml') {
-        expand props
-    }
 }
