--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,12 @@ plugins {
 group = 'org.azex'
 version = ''
 
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
+}
+
 repositories {
     mavenCentral()
     maven {
